Copied README.md and CodeBook.md and produced R Markdown versions.

--- a/CodeBook.Rmd
+++ b/CodeBook.Rmd
@@ -1,19 +1,20 @@
 ---
+title: "Human Activity Recognition Using Smartphones Summary Dataset"
+author: "S.V."
+date: "11/10/2020"
 output:
   pdf_document: default
-  html_document: default
 ---
 
-Human Activity Recognition Using Smartphones Summary Dataset
-Version 1.0
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-Author: S. V.
-
+## Introduction
 
 The summary dataset was created using the Human Activity Recognition (HAR) Using Smartphones Dataset as offered by the University of California in Irvine (UCI) for the purpose of demonstrating skills in getting and cleaning data. 
 
-
-Background of the HAR Dataset
+## Background of the HAR Dataset
 
 The full HAR dataset was created through experimentation by Jorge L. Reyes-Ortiz, David Anguita, Alessandro Ghio, and Luca Oneto -- a collaboration between Smartlab (Non Linear Complex Systems Laboratory)
 DITEN (Universit‡ degli Studi di Genova), and Via Opera Pia 11A, I-16145, Genoa, Italy. 
@@ -34,7 +35,7 @@ See the following files from the HAR dataset for more information: README.txt, f
 Source URL:http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartphones
 
 
-HAR Dataset Summarization Methodology
+## HAR Dataset Summarization Methodology
 
 The HAR Summary Dataset was produced to provide easily accessible averages of the mean and standard deviation (std) measurements in three dimensional (3D) space for  each activity and each subject.  
 
@@ -69,4 +70,3 @@ The condensed dataset was compiled and exported to the "HARdataset.txt" output f
 - "tBodyAcc-std()-X"
 - "tBodyAcc-std()-Y"
 - "tBodyAcc-std()-Z"
-
