--- a/README.Rmd
+++ b/README.Rmd
@@ -1,11 +1,13 @@
 ---
-output:
-  html_document: default
-  pdf_document: default
+title: "README file associated with Human Activity Recognition (HAR) Using Smartphones Dataset Summarization" # R Markdown version of README.md
+author: "S.V."
+date: "11/12/2020"
+output: pdf_document
 ---
-Title: README file associated with Human Activity Recognition (HAR) Using Smartphones Dataset Summarization
 
-Author: S. V.
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
 The R script "run_analysis.R" loaded the data from six files specified in the CodeBook and assembled the datasets into two dataframes (testdf and traindf). The script loads the activity labels (from "activity_lables.txt") into the dataframe "actlabels".  The script merged the two dataframes into a single dataframe, HARdf, and extracted the subject numbers, activity labels, and triaxial means and standard deviations (std) per subject and per activity. The following column names were assigned: "SubjectID", "Activity", "tBodyAcc-mean()-X", "tBodyAcc-mean()-Y", "tBodyAcc-mean()-Z","tBodyAcc-std()-X", "tBodyAcc-std()-Y",
 and "tBodyAcc-std()-Z".
@@ -19,4 +21,3 @@ The script used two nested for loops with two rule-constrained indeces "id" and 
 Within the first for loop, the script set the logic used to subset the data to be averaged in the second for lood and saved it to "subsetlogic". The script set the variable "subsetlogic" as the slice of HARdf for which the variable "SubjectID" equals the "subjectIDs" at index "id"" and the variable "Activity" equals the "actlabels" at index "act". In the second of the nested for loops, the script extracts the slice of HARdf by subsetlogic and for the j-th column. The mean is taken over the extracted column vector and rounded to 6 decimal places. The result is stored in the cell [i,j] of the HARsummary dataframe.
 
 After completion of the nested for loops, the script saved the HARsummary dataframe to the working directory with filename "HARdataset.txt" using the write.table function and variable row.names set equal to FALSE.
-
